# grfx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Topo.h  Topo.hpp  Topo.m  TopoMesh.hpp  defs.hpp  grfx.h  grfx.hpp  grfx.m  queries.txt
TriCalc/: TriCalc.mm
arr/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  arr.hpp
arr/examples/: CMakeLists.txt  examples.cpp
arr/headers/: arr1.hpp  arr2.hpp  arr2slice.hpp  arr2sub.hpp  arr3.hpp  barr1.hpp  barr2.hpp  barr2slice.hpp  barr2sub.hpp  barr3.hpp  darr1.hpp  darr2.hpp  darr2slice.hpp  darr2sub.hpp  uiarr1.hpp  uiarr2.hpp
arr/iOS_bridge/headers/: ObjC_Interop.h
arr/iOS_bridge/sources/: ObjC_Interop.mm
arr/sources/: arr.cpp  arr1.tem  arr2.tem  arr2slice.tem  arr2sub.tem  arr3.tem  barr1.cpp  barr2.cpp  barr2slice.cpp  barr2sub.cpp  barr3.cpp  darr1.cpp  darr2.cpp  darr2slice.cpp  darr2sub.cpp  uiarr1.cpp  uiarr2.cpp
grfx2/: CMakeLists.txt  grfx2.hpp
grfx2/headers/: gbdy.hpp  gbmp.hpp  gcmr.hpp  gcrd.hpp  gctx.hpp  gfgr.hpp  gfrm.hpp  gidx.hpp  gimg.hpp  glne.hpp  glyr.hpp  govl.hpp  gply.hpp  gpnt.hpp  grct.hpp  gstr.hpp  gvtr.hpp
grfx2/sources/: gbdy.cpp  gbmp.cpp  gcmr.cpp  gcrd.cpp  gctx.cpp  gfgr.cpp  gfrm.cpp  gidx.cpp  gimg.cpp  glne.cpp  glyr.cpp  govl.cpp  gply.cpp  gpnt.cpp  grct.cpp  gstr.cpp  gvtr.cpp
grfx3/: grfx3.hpp
grfx3/headers/: gfrm3.hpp  gfrm3_0.hpp  glne3.hpp  gpnt3.hpp
grfx3/sources/: gfrm3.cpp  gfrm3_0.cpp  glne3.cpp  gpnt3.cpp
headers/: Mesh.hpp  TexVertex.hpp  Topo.hpp  TopoTri.hpp
sources/: Mesh.cpp  TopoTri.cpp  TopoVertex.cpp
test/: CMakeLists.txt  grfxTest.cpp  unit-test.hpp
tlbx/: CMakeLists.txt  README.md  tlbx.hpp
tlbx/headers/: col.hpp  mth.hpp  str.hpp  trg.hpp
tlbx/iOS_bridge/headers/: cppBridge.h
tlbx/sources/: col.cpp  mth.cpp  str.cpp  trg.cpp
